@@ -2,11 +2,10 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
 
 public class ConvertMatrix2ListTest {
     @Test
@@ -16,9 +15,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2, 3, 4},
                 {5, 6, 7, 8}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
